Revision history for Lufi

?.??.? ????-??-??

0.04.0 2019-08-04
	- Allow to zip the files before upload
	- Allow to see what’s in zip file on download page
	- Allow to individually download files from zip file (only if zip created by Lufi)
	- Allow to invite people to send you files on Lufi when using LDAP auth (#150).
	  Feature paid for by TECH’advantage (https://www.tech-advantage.com/)

0.03.7 2019-08-01
	- Fix missing default values for some settings (mildis)

0.03.6 2019-07-30
	- Update german translation
	- Use configured url prefix when using mail sending interface
	- Avoid collision between startup and recurring provisionings
	- Avoid files password autocomplete by browsers (tested with Firefox and
	  Chromium) (#138)

0.03.5 2018-12-06
	- Fix CI

0.03.4 2018-12-06
	- Update arabic, german and italian translations

0.03.3 2018-11-02
	- Update deps, seems to fix install on Debian Jessie

0.03.2 2018-11-02
	- Fix dependences in Lufi.pm

0.03.1 2018-10-29
	- Fix default CSP Header

0.03 2018-10-28
	- Use Mojo::SQLite instead of ORLite
	- Use FiatTux plugins
	- Option to force "Burn after reading" for each uploaded file
	- Use GzipStatic and StaticCache plugins for speed
	- Allow to block files by setting an abuse field in DB
	- Display file size when uploading
	- Add Content-Security-Policy header
	- Update sjcl.js
	- Mitigate genRandomKey exception risk
	- Add report file link in the navbar
	- Allow to choose your language
	- Use a recurrent task to provision shorts
	- Add a command to migrate data from SQLite to an other database
	- Add a test suite
	- MySQL support
	- Display max size on upload page
	- Add CSRF token challenge on login
	- Add CSRF token challenge on logout
	- Add constraints on mail sending to prevent spam sending (not perfect, but
	should be good enough)
	- Add Code of Conduct
	- Add arabic translation
	- Add german translation

0.02.2 2017-09-18
	- Fix cron tasks bug

0.02.1 2017-09-14
	- Fix DB abstraction layer bug

0.02  2017-09-13