@@ -7,8 +7,9 @@
 var actionURL = '<%= url_for('/')->to_abs() %>';
 var counterURL = '<%== url_for('counter') %>';
 var i18n       = {
-    noExpiration:    '<%= l('No expiration delay') %>',
-    importProcessed: '<%= l('The data has been successfully imported.') %>',
+    noExpiration:             '<%= l('No expiration delay') %>',
+    importProcessed:          '<%= l('The data has been successfully imported.') %>',
+    importFilesWithoutPrefix: "<%= l('Lufi recently changed its way to store files information.\n\nNo files have been found in the new localStorage location but we found files in the old one.\nDo you want to import those informations?\n\nPlease note that this is the only time that we ask this question.') %>",
 };
 $(document).ready(function() {
     populateFilesTable();
