@@ -1,2 +1,3 @@
 % # vim:set sts=4 sw=4 ts=4 ft=javascript expandtab:
 var langUrl = '<%= url_for('lang') %>';
+var prefix  = '<%= substr(config('prefix'), 1) %>';
